--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.4'
 
 services:
   web:
-    build: ./app
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8080:80"
   db:
@@ -14,6 +16,7 @@ services:
       MYSQL_PASSWORD: password
     volumes:
       - db_data:/var/lib/mysql
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "3306:3306"
 volumes:
